# AITRack

./: Cargo.toml  REQUIREMENTS.md
bevy_ui_debug/: Cargo.toml
bevy_ui_debug/src/: app.rs  lib.rs  main.rs  render.rs  resources.rs  systems.rs  ui.rs
cli/: Cargo.toml
cli/src/: main.rs
docs/: architecture.md
sensor_models/: Cargo.toml
sensor_models/src/: lib.rs  observation.rs  radar.rs
sim/: Cargo.toml
sim/src/: lib.rs  radar_sim.rs  replay.rs  scenarios.rs  target.rs
tests/golden/: dense-crossing.json  simple.json
tracker_core/: Cargo.toml
tracker_core/benches/: pipeline_bench.rs
tracker_core/src/: association.rs  bias.rs  ekf.rs  gating.rs  imm.rs  jpda.rs  kf.rs  lib.rs  metrics.rs  pipeline.rs  track.rs  track_manager.rs  types.rs  ukf.rs
