[workspace]
members = [
    "tracker_core",
    "sensor_models",
    "sim",
    "bevy_ui_debug",
    "cli",
]
resolver = "2"

[workspace.dependencies]
# Math
nalgebra = { version = "0.33", features = ["serde-serialize"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
# RNG
rand = { version = "0.8", features = ["small_rng"] }
rand_chacha = "0.3"
# Bevy
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "x11",
    "wayland",
    "multi_threaded",
    "tonemapping_luts",
    "bmp",
] }
bevy_egui = "0.31"
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
# CLI
clap = { version = "4", features = ["derive"] }
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
# Errors
thiserror = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1        # faster compile + acceptable debug perf
