[package]
name = "bevy_ui_debug"
version = "0.1.0"
edition = "2021"
description = "Bevy ECS debug UI: rendering, play/pause/step, inspection panels"

[features]
default = ["debug_ui"]
debug_ui = []

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracker_core = { path = "../tracker_core" }
sensor_models = { path = "../sensor_models" }
sim = { path = "../sim" }
clap = { workspace = true }
