[package]
name = "cli"
version = "0.1.0"
edition = "2021"
description = "Batch CLI: run scenarios, export metrics, replay logs"

[[bin]]
name = "aittrack"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tracker_core = { path = "../tracker_core" }
sensor_models = { path = "../sensor_models" }
sim = { path = "../sim" }
